--- a/packages/ui/public/index.html
+++ b/packages/ui/public/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Criai Flow</title>
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <meta charset="utf-8">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
