--- a/packages/ui/index.html
+++ b/packages/ui/index.html
@@ -14,8 +14,8 @@
         <!-- Open Graph / Facebook -->
         <meta property="og:locale" content="en_US" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://flowiseai.com/" />
-        <meta property="og:site_name" content="flowiseai.com" />
+        <meta property="og:url" content="https://criaiai.com/" />
+        <meta property="og:site_name" content="criaiai.com" />
         <meta property="og:title" content="Flowise - Low-code LLM apps builder" />
         <meta property="og:description" content="Drag & drop UI to build your customized LLM flow" />
         <!-- Twitter -->
